--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.2",
     "@biomejs/biome": "1.8.3",
+    "@iconify-json/fa-brands": "^1.2.0",
     "@iconify-json/fa6-brands": "^1.1.22",
     "@iconify-json/fa6-regular": "^1.1.22",
     "@iconify-json/fa6-solid": "^1.1.24",
