--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,10 +1,10 @@
 name: Update GitHub Profile README
 
 on:
-  push:
+  push: # 自动触发
     paths:
-      - "src/content/post/**" # 监听文章目录中的改动
-    workflow_dispatch: # 手动触发
+      - "src/content/post/**" # 监听这个目录下的文件变化
+  workflow_dispatch: # 手动触发
 
 jobs:
   update-readme:
